Feat: swagger_ui 연동과 설정 추가, 각 view 별 연동과 api 수정
