# .devcontainer/backend/flask_app/src/views/diary.py
@@ -10,23 +10,27 @@ diary_view = Blueprint('diary_view', __name__, url_prefix='/diary')
 @diary_view.route('/', methods=['POST'])
 def create_diary():
     data = request.get_json()
-
+    
     # DiaryEntry 필드 추출 및 생성
     diary_fields = ['user_id', 'group_id', 'title', 'record_date', 'text_content', 'entry_type']
     new_diary = DiaryEntry(**{field: data[field] for field in diary_fields})
     new_diary.add_instance()
-
     # DiaryImage 생성
     images = data.get('images', [])
     for image_data in images:
-        new_image = DiaryImage(entry_id=new_diary.id, **image_data)
+        # Exclude 'id' from image_data
+        filtered_image_data = {k: v for k, v in image_data.items() if k != 'id'}
+        new_image = DiaryImage(entry_id=new_diary.id, **filtered_image_data)
         new_image.add_instance()
 
     # DiaryTag 생성
     tags = data.get('tags', [])
     for tag_data in tags:
-        new_tag = DiaryTag(entry_id=new_diary.id, **tag_data)
+        # Exclude 'id' from tag_data
+        filtered_tag_data = {k: v for k, v in tag_data.items() if k != 'id'}
+        new_tag = DiaryTag(entry_id=new_diary.id, **filtered_tag_data)
         new_tag.add_instance()
+
 
     return jsonify({'message': f'New diary created with ID {new_diary.id}'}), 201
 
@@ -38,13 +42,11 @@ def get_diary(diary_id):
         return jsonify({'message': 'Diary not found'}), 404
 
     # DiaryImage 및 DiaryTag 조회
-    images = DiaryImage.query.filter_by(entry_id=diary_id).all()
-    tags = DiaryTag.query.filter_by(entry_id=diary_id).all()
+    diary.images = DiaryImage.query.filter_by(entry_id=diary_id).all()
+    diary.tags = DiaryTag.query.filter_by(entry_id=diary_id).all()
 
     return jsonify({
-        'diary': diary.to_json(),
-        'images': [image.to_json() for image in images],
-        'tags': [tag.to_json() for tag in tags]
+        'diary': diary.to_json()
     }), 200
 
 # 기존 일기 수정 (DiaryEntry, DiaryImage, DiaryTag)
@@ -62,8 +64,8 @@ def update_diary(diary_id):
     # DiaryImage 수정 (새로 추가된 이미지는 생성, 기존 이미지는 수정)
     images = update_data.get('images', [])
     for image_data in images:
-        if 'image_id' in image_data:
-            image = DiaryImage.get_instance(image_data['image_id'])
+        if 'id' in image_data:
+            image = DiaryImage.get_instance(image_data['id'])
             if image:
                 image.update_image(image_data)
         else:
@@ -73,8 +75,8 @@ def update_diary(diary_id):
     # DiaryTag 수정 (새로 추가된 태그는 생성, 기존 태그는 수정)
     tags = update_data.get('tags', [])
     for tag_data in tags:
-        if 'tag_id' in tag_data:
-            tag = DiaryTag.get_instance(tag_data['tag_id'])
+        if 'id' in tag_data:
+            tag = DiaryTag.get_instance(tag_data['id'])
             if tag:
                 tag.update_tag(tag_data)
         else:
@@ -85,9 +87,9 @@ def update_diary(diary_id):
 
 
 # 사용자의 특정 일기를 조회
-@diary_view.route('/<int:user_id>', methods=['GET'])
-def get_diary_list(user_id):
-    diaries = DiaryEntry.get_instances_list(user_id)
+@diary_view.route('/<string:user_id>', methods=['GET'])
+def get_user_diaries(user_id):
+    diaries = DiaryEntry.query.filter_by(user_id=user_id).all()
     if not diaries:
         return jsonify({'message': 'Diary not found'}), 404
 
@@ -96,7 +98,7 @@ def get_diary_list(user_id):
     return jsonify(diary_list), 200
 
 # 사용자의 특정 학급의 일기를 조회
-@diary_view.route('/<int:user_id>/<int:group_id>', methods=['GET'])
+@diary_view.route('/<string:user_id>/<string:group_id>', methods=['GET'])
 def get_group_diaries(user_id, group_id):
     diaries = DiaryEntry.query.filter_by(group_id=group_id, user_id=user_id).all()
     if not diaries:
@@ -105,3 +107,13 @@ def get_group_diaries(user_id, group_id):
     diary_list = [diary.to_json() for diary in diaries]
 
     return jsonify(diary_list), 200
+
+@diary_view.route('/image', methods=['POST'])
+def add_diary_image():
+    data = request.get_json()
+
+    # option에 따른 ai 이미지 생성 필요 (option : base, line 등)
+
+
+    # 생성된 이미지를 JSON으로 반환
+    return jsonify({'message': 'new_image.to_json()'}), 201
